# polkavex

./: .env.example  .gitignore  DAY_4_UI_SUCCESS_REPORT.md  DAY_5_COMPLETION_REPORT.md  DAY_5_STUDY_NOTES.md  DAY_6_SUBMISSION_READY_REPORT.md  DEPLOY.md  FINAL_INTEGRATION_REPORT.md  HOSTING_GUIDE.md  README.md  VALIDATION_SUCCESS_REPORT.md  bot-simulation-report-1754063770141.json  bot-simulation-report-1754064085107.json  bot-simulation-report-1754142963187.json  bots.js  deploy-quick.sh  deploy.sh  docker-compose.yml  final-integration-test.sh  full-system-test.js  package-lock.json  package.json  system-health-check.js  verify-setup.sh
ethereum/: .env.example  DEPLOYMENT.md  README.md  deployment.json  hardhat.config.ts  package-lock.json  package.json
ethereum/contracts/: FusionEscrow.sol  PolkavexEscrow.sol
ethereum/scripts/: deploy-fusion.js  deploy-fusion.ts  deploy.js
ethereum/test/: FusionEscrow.test.ts
polkadot/: Cargo.toml
polkadot/pallets/fusion/: Cargo.toml
polkadot/pallets/fusion-escrow/: Cargo.toml  Cargo_simple.toml
polkadot/pallets/fusion-escrow/src/: lib.rs  mock.rs  tests.rs
polkadot/pallets/fusion/src/: benchmarking.rs  debug_test.rs  lib.rs  mock.rs  mock_new.rs  tests.rs  tests_final.rs  tests_simple.rs  weights.rs
polkadot/runtime/: Cargo.toml  build.rs
polkadot/runtime/src/: lib.rs
polkadot/src/: lib.rs  lib_substrate.rs  main.rs  main_simple.rs
relayer/: .env.production.template  Dockerfile  PROGRESS_DAY_2_3.md  comprehensive-test.sh  demo.sh  final-relayer-verification.sh  final-validation.sh  index.js  index.ts  package-lock.json  package.json  quick-test.sh  simple.ts  test-relayer.ts  tsconfig.json
relayer/.nyc_output/: ea87b7b5-c0ef-4eb4-8810-1e3470bb7e89.json
relayer/.nyc_output/processinfo/: 01661513-e9a2-4106-be9d-31d191f0dbd8.json  085ccd6b-7cd5-4dc5-b3dc-801e74b1ca4e.json  ea87b7b5-c0ef-4eb4-8810-1e3470bb7e89.json  index.json
relayer/services/: oneinch.js
relayer/test/: relayer.test.js
ui/: .env.production.template  Dockerfile  demo-showcase.sh  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-ui-integration.sh  vercel.json
ui/src/: App.css  App.enhanced.css  App.modern.css  App.new.tsx  App.simple.tsx  App.tsx
