[package]
name = "pallet-fusion"
version = "1.0.0"
edition = "2021"
description = "Polkavex Fusion Pallet - Production-grade HTLC with XCM integration for 1inch Fusion+ compatibility"
authors = ["Polkavex Team"]
license = "MIT"

[dependencies]
# Substrate primitives
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

# Substrate core dependencies 
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Multi-asset support
pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# XCM support - Temporarily disabled for initial compilation
# polkadot-parachain = { version = "0.9.43", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.43" }
# polkadot-runtime-common = { version = "0.9.43", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.43" }
# xcm = { version = "0.9.43", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.43" }
# xcm-builder = { version = "0.9.43", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.43" }
# xcm-executor = { version = "0.9.43", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.43" }

# Optional benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[dev-dependencies]
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-insecure-randomness-collective-flip = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-assets/std",
    "pallet-balances/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-balances/try-runtime",
]
